# mcts-floorplan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
docs/: FLOORPLAN_ANALYSIS.md  floorplan-state-design-en.md  phase1-summary.md
examples/: CMakeLists.txt  floorplan.cpp
include/floorplan/: floorplan_bookshelf.hpp  floorplan_reward.hpp  floorplan_rollout.hpp  floorplan_state.hpp
tests/: CMakeLists.txt  test_floorplan_state.cpp
